<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<LinearLayout
    android:orientation="vertical"
    android:background="#f5f2f2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!---->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="25sp"
                    android:fontFamily="@font/atma_semibold"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/balance" />
            </LinearLayout>
            <!---->
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="35sp"
                    android:textColor="#807777"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="‎৳"
                    android:fontFamily="@font/atma_semibold"
                    android:layout_weight="1.0" />

                <TextView
                    android:textSize="35sp"
                    android:textColor="#807777"
                    android:id="@+id/tv_MainActivity_BalanceField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=" ০০.০০"
                    android:fontFamily="@font/atma_semibold"
                    android:layout_weight="1.0" />
            </LinearLayout>
            <!---->
        </LinearLayout>
    <View
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
        <!---->
        <!---->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="5dp">
            <!---->
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_weight="1.0">
                <!---->
                <RelativeLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <!---->
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:id="@+id/lnr_Deposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/debitor" />

                        <TextView
                            android:textSize="20sp"
                            android:fontFamily="@font/atma_semibold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/deposti" />
                    </LinearLayout>
                    <!---->
                </RelativeLayout>
                <!---->
            </LinearLayout>
            <View

                android:layout_marginTop="5dp"
                android:background="#000"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <!---->
            <!---->
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/border"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <!---->
                <RelativeLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <!---->
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:id="@+id/lnr_Expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/debitor" />

                        <TextView
                            android:textSize="20sp"
                            android:fontFamily="@font/atma_semibold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/expense" />
                    </LinearLayout>
                    <!---->
                </RelativeLayout>


            </LinearLayout>

            <!---->
        </LinearLayout>
    <View
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <!---->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">
        <!---->
        <LinearLayout
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_weight="1.0">
            <RelativeLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/lnrDebtor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/debitor" />

                    <TextView
                        android:textSize="20sp"
                        android:fontFamily="@font/atma_semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/debit" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <!---->
        <View
            android:layout_marginTop="5dp"
            android:background="#000"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <!---->
        <LinearLayout
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_weight="1.0">
            <!---->
            <RelativeLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <!---->
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/lnr_Expense2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/debitor" />

                    <TextView
                        android:textSize="20sp"
                        android:fontFamily="@font/atma_semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/credit" />
                </LinearLayout>
                <!---->
            </RelativeLayout>
    </LinearLayout>
    <!---->
<!---->
</LinearLayout>
    <View
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <!---->
    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout

            android:orientation="vertical"
            android:id="@+id/lnr_DailyHistory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"

            android:layout_weight="1.0">

            <!--<android.support.v7.widget.CardView
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">-->

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imageView1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/daily_history"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            <!--</android.support.v7.widget.CardView>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atma_medium"
                android:text="@string/daily_history"
                android:textColor="#000"
                android:textSize="13sp" />
        </LinearLayout>
        <View
            android:background="#000"
            android:layout_width="1dp"
            android:layout_height="80dp"/>


        <LinearLayout

            android:orientation="vertical"
            android:id="@+id/lnr_MonthlyHistory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:layout_weight="1.0">
            <!--<android.support.v7.widget.CardView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                app:cardCornerRadius="10dp">-->

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/daily_history" />
            <!--</android.support.v7.widget.CardView>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atma_bold"
                android:text="@string/monthly_history"
                android:textColor="#000"
                android:textSize="13sp" />
        </LinearLayout>
        <View
            android:background="#000"
            android:layout_width="1dp"
            android:layout_height="80dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/lnr_YearlyHistory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:layout_weight="1.0">
           <!-- <android.support.v7.widget.CardView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                app:cardCornerRadius="10dp">-->

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/daily_history" />
           <!-- </android.support.v7.widget.CardView>-->

            <TextView
                android:textSize="13sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yearly_history" />
        </LinearLayout>


    </LinearLayout>
    <!--</ScrollView>-->
</LinearLayout>
</ScrollView>